fix search results outside spacing

--- a/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
@@ -111,7 +111,8 @@
 }
 
 .select2-results {
-  padding-left: 0 !important;
+  margin: 4px 0;
+  padding: 0 4px;
 
   li {
     font-size: 85% !important;
